# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = sdc_services
version = attr: setuptools_scm.get_version

[options]
packages = sdc_services
zip_safe = False
include_package_data = True
setup_requires =
    setuptools_scm

# abstract requirements;
# concrete requirements belong in requirements.txt
# https://caremad.io/posts/2013/07/setup-vs-requirement/
install_requires =
    flask
    requests

[options.extras_require]
dev =
    pytest
    tox

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # error on bad assertions
    error:.*assertion is always true.*

[flake8]
max-line-length = 120
